--- a/css/all-tours.css
+++ b/css/all-tours.css
@@ -168,7 +168,6 @@
   transition: all 0.3s ease;
 }
 .all-tours-card__text {
-  max-width: 263px;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -191,13 +190,8 @@
   color: #000000;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-box-orient: vertical;
   -webkit-line-clamp: 5;
-}
-.all-tours-card__desc .no-clamp {
-  display: block;
-  -webkit-line-clamp: none;
-  overflow: visible;
+  -webkit-box-orient: vertical;
 }
 .all-tours-card__pic {
   position: relative;
@@ -251,13 +245,18 @@
 .all-tours-card__link:hover:before {
   width: 100%;
 }
+@media (max-width: 1600px) {
+  .all-tours-card__desc p {
+    font-size: 12px;
+    -webkit-line-clamp: 4;
+  }
+}
 @media (max-width: 1440px) {
   .all-tours-card__text h2 {
     font-size: 18px;
   }
   .all-tours-card__desc p {
     font-size: 12px;
-    -webkit-line-clamp: 3;
   }
   .all-tours-card__link {
     font-size: 18px;
@@ -290,9 +289,7 @@
   .all-tours-card {
     --card-height-offset: clamp(25px, 9vh, 88px);
   }
-  .all-tours-card__text {
-    max-width: 194px;
-  }
+
   .all-tours-card__pic {
     max-width: 242px;
   }
@@ -379,10 +376,6 @@
   }
   .all-tours-card__text h2 {
     font-size: 17px;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical;
   }
   .all-tours-card__link {
     position: initial;
@@ -554,7 +547,7 @@
     transition: all 0.2s ease-out;
   }
   .grand-filter.active {
-    height: auto;
+    height: 100%;
     margin-bottom: 24px;
     border-top: 1px solid #000000;
   }
